/* 1.15 Dual Tone Multi Frequency function (DTMF) */ MSC page link -> glossary

--- a/GSM02.07.mw
+++ b/GSM02.07.mw
@@ -110,7 +110,7 @@ GSM 02.30}} page 12
 
 === 1.15 Dual Tone Multi Frequency function (DTMF) ===
 We need to be able to initiate [[DTMF]] in accordance with specifications GSM 02.03 [2] and GSM 03.14 [11]. This will put some additional requirements on both the dialler application and the GSM library/daemon infrastructure, since the [[DTMF]] tones are not actually transmitted as tones on the
-voice channel, but actually signalled as messages through the GSM network into the [[MSC]] (Mobile Switching Centre), which then creates the tones into to the voice channel.
+voice channel, but actually signalled as messages through the GSM network into the [[Glossary#MSC|MSC]] (Mobile Switching Centre), which then creates the tones into to the voice channel.
 
 All of this will be handled by the [[Dialer#In_Call_Mode | In Call Mode]] of the [[Dialer]] application.
 
