/* Using the mouse and keyboard from your desktop on the OM device */

--- a/Debian.mw
+++ b/Debian.mw
@@ -131,6 +131,9 @@ Configure your desktop computer to export your xsession:
  On your desktop (with root permissions):
  Make sure that sshd is installed and in /etc/ssh/sshd_config you have set
  X11Forwarding yes
+
+In K/Ubuntu sshd is in the package openssh-server.
+
 On your OM device install x2x (with root permissions)
  apt-get install x2x
 Now open a new X terminal on your desktop computer. You MUST be the same user that is running the xsession on your desktop (i.e. do not su to root or another user in your x terminal!). On your OM device you should be running an xsession as the user openmoko. Assuming that you have a usb networking connection to OM (with standard configuration) on the user prompt of your desktop type:
