/* Pages proposed for deletion */ more to delete

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -98,25 +98,27 @@ These end up in mixed content. They could be removed and content migrated to mor
 |-
 | [[P1 Buying Interest List]] || Outdated || [[User:Kempelen|Kempelen]], [[User:Marko Knöbl|Marko Knöbl]]
 |-
-| [[Om 2007.2/de]] || was copied from the english page on 2008-08-05, not translated|| [[User:Marko Knöbl|Marko Knöbl]]
+| [[Om 2007.2/de]] || was copied from the english page on 2008-08-05, not translated|| [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
 |-
-| [[Automatic emulation in windows xp]] || redirect to page that doesn't exist anymore|| [[User:Marko Knöbl|Marko Knöbl]]
+| [[Automatic emulation in windows xp]] || redirect to page that doesn't exist anymore|| [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
 |-
-| [[Style Sheet]] and [[Talk:Style Sheet]]|| not used anymore|| [[User:Marko Knöbl|Marko Knöbl]]
+| [[Style Sheet]] and [[Talk:Style Sheet]]|| not used anymore|| [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
 |-
-| [[Supported Hardware/es]] || no content || [[User:Marko Knöbl|Marko Knöbl]]
+| [[Supported Hardware/es]] || no content || [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
 |-
-| [[Tempmain/es]] || is now at [[Main Page/es]] || [[User:Marko Knöbl|Marko Knöbl]]
+| [[Tempmain/es]] || is now at [[Main Page/es]] || [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
 |-
-| [[Trash]] || || [[User:Marko Knöbl|Marko Knöbl]]
+| [[Trash]] || || [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
 |-
-| [[外观]] || || [[User:Marko Knöbl|Marko Knöbl]]
+| [[外观]] || || [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
 |-
-| [[Finger]] || Funny, but not relevant|| [[User:Marko Knöbl|Marko Knöbl]]
+| [[Finger]] || Funny, but not relevant|| [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
 |-
-| [[GSM Communication Infrastructure]] || not much information|| [[User:Marko Knöbl|Marko Knöbl]]
+| [[GSM Communication Infrastructure]] || not much information|| [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]] (will have to remove links too)
 |-
-| [[Shipping Notes:phase1 Poland]] || outdated|| [[User:Marko Knöbl|Marko Knöbl]]
+| [[Shipping Notes:phase1 Poland]] || outdated|| [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
+|-
+| [[Look_%26_Feel/fr]] || English old copy || [[User:Kempelen|Kempelen]]
 |}
 
 ==Wiki engine issues==
