*Empty MediaWiki Message*

--- a/T-Mobile_pppd_scripts.mw
+++ b/T-Mobile_pppd_scripts.mw
@@ -1,5 +1,6 @@
 I got this working using wap.voicestream.com.  internet2 keeps giving me "LCP terminated by peer (^K!)" after CHAP auth.
 
+Note to the above comment (2008-08-19 by Ryan Adams): I finally got internet2.voicestream.com working (on OM2008.8).  Initially, like the user above, I received "LCP terminated by peer (^K!)" after CHAP authentication.  It turns out this only happened when I dialed in to "99***2".  When I used "99***1" instead I was able to get all the way through without any errors.  I have the "T-Mobile Total Internet Add-on" plan and live around Seattle, WA.
 
 == /etc/ppp/peers/tmobile ==
    # File: /etc/ppp/peers/tmobile
