--- a/TangoGPS.mw
+++ b/TangoGPS.mw
@@ -5,7 +5,7 @@ TangoGPS is a map application which can utilize Neo's built-in GPS to show your 
 
 Website: http://www.tangogps.org
 
-== Running tangoGPS on OM2008.8 ==
+== Running tangoGPS on [[Om 2008.8]] ==
 
 {{note|There may be other steps because I remember it took a while before my TangoGPS started working, but these are the only things I remember installing}}
 
@@ -25,10 +25,53 @@ Then start gpsd by:
 
 Now you must power up the GPS-chip by opening the "Settings" application and setting the GPS entry to "on". Now you can run tangoGPS and wait until it get's a GPS fix. This can take up to a few minutes.
 
+== Running TangoGPS on [[debian]] ==
+
+Tangogps is a very nice GPS mapping application.  The latest version is available in [[Debian]].
+
+Unfortunately it depends on gpsd which conflicts with frameworkd in fso-frameworkd.
+
+ # apt-get install gpsd tangogps
+
+Edit <code>/etc/frameworkd.conf</code>.  In the section <code>[ogpsd]</code>, edit to read:
+<pre>
+# path = /dev/ttySAC1
+path = /dev/null
+</pre>
+
+ /etc/init.d/fso-frameworkd restart
+ /etc/init.d/zhone-session stop && sleep 2 && /etc/init.d/zhone-session start 
+
+ # dpkg-reconfigure gpsd
+
+* Start gpsd automatically on boot? Yes.
+* Device the GPS receiver is attached to: /dev/ttySAC1
+* Should gpsd handle attached USB GPS receivers automatically? Yes
+** not certain what this answer should be
+* Options to gpsd: none
+
+
+Start tangogps like this:
+
+ # echo 1 >/sys/devices/platform/s3c2440-i2c/i2c-adapter/i2c-0/0-0073/neo1973-pm-gps.0/pwron
+Turns the GPS on.
+
+ # DISPLAY=:0 tangogps
+
+
+'''Issues:'''
+* The different daemons for reading GPS data mean that both tangogps and the framework demo GPS application can't be configured to work at the same time.  Reboots are probably necessary when switching between them.
+** Both gpsd and the framework publish GPS data through dbus, though with different interfaces.  This suggests a number of possible solutions.
+*** gpsd or the framework could implement the other's interface (along with their own).
+*** a translator could read one interface and emulate the other
+*** the framework could have an option to read data from gpsd.
+*** tangogps could be extended to read data from the framework.
+
 == Downloading Maps for offline use ==
 tangoGPS can bunch-download the map images so you don't need an internet connection while walking around. By default tangoGPS stores downloaded maps to /tmp/. This folder is lost every time you reboo the device. But you can use the "Config" tab within tangoGPS to change the "Cache Dir" location to , for example, /osm/ . So downloaded maps will be kept in the Neos flash, also after reboot. Unfortunately this configruation is lot every time you restart tangoGPS. So every time you start tangoGPS you have to go to this Config tab and set the correct location.
 
 Once you have set the location to a non-volatile path, you can connect your Neo to the internet by USB or WiFi at home and start downloading the maps of your area. Tap the map screen and select "map download". Now on-the-road  tangoGPS will be able to show you maps in different zoom levels even though you are not connected to the inet.
+
 
 == Downloading Maps via GPRS ==
 I think TangoGPS may have started working after I followed the instructions to get GPRS working with GSM multiplexing here: [[Manually_using_GPRS#Option_1:_With_GSM_multiplexing_and_with_a_GUI]]
