--- a/Debian.mw
+++ b/Debian.mw
@@ -69,47 +69,8 @@ Issues:
 * does not support multiple wireless networks or open hotspots that you may travel between
 
 = Software =
-== [[TangoGPS]] ==
-
-Tangogps is a very nice GPS mapping application.  The latest version is available in Debian.
-
-Unfortunately it depends on gpsd which conflicts with frameworkd in fso-frameworkd.
-
- # apt-get install gpsd tangogps
-
-Edit <code>/etc/frameworkd.conf</code>.  In the section <code>[ogpsd]</code>, edit to read:
-<pre>
-# path = /dev/ttySAC1
-path = /dev/null
-</pre>
-
- /etc/init.d/fso-frameworkd restart
- /etc/init.d/zhone-session stop && sleep 2 && /etc/init.d/zhone-session start 
-
- # dpkg-reconfigure gpsd
-
-* Start gpsd automatically on boot? Yes.
-* Device the GPS receiver is attached to: /dev/ttySAC1
-* Should gpsd handle attached USB GPS receivers automatically? Yes
-** not certain what this answer should be
-* Options to gpsd: none
-
-
-Start tangogps like this:
-
- # echo 1 >/sys/devices/platform/s3c2440-i2c/i2c-adapter/i2c-0/0-0073/neo1973-pm-gps.0/pwron
-Turns the GPS on.
-
- # DISPLAY=:0 tangogps
-
-
-'''Issues:'''
-* The different daemons for reading GPS data mean that both tangogps and the framework demo GPS application can't be configured to work at the same time.  Reboots are probably necessary when switching between them.
-** Both gpsd and the framework publish GPS data through dbus, though with different interfaces.  This suggests a number of possible solutions.
-*** gpsd or the framework could implement the other's interface (along with their own).
-*** a translator could read one interface and emulate the other
-*** the framework could have an option to read data from gpsd.
-*** tangogps could be extended to read data from the framework.
+== TangoGPS ==
+{{main|TangoGps}}
 
 = Miscellaneous =
 == Making the cursor invisible ==
