--- a/Debian.mw
+++ b/Debian.mw
@@ -70,7 +70,7 @@ Issues:
 
 = Software =
 == TangoGPS ==
-{{main|TangoGps}}
+{{main|TangoGPS}}
 
 = Miscellaneous =
 == Making the cursor invisible ==
