/* Fix Default */ tab completion

--- a/Switching_Keyboards_on_Om_2007.2.mw
+++ b/Switching_Keyboards_on_Om_2007.2.mw
@@ -2,6 +2,7 @@
 
 Due to a bug, the default keyboard supplied on the 2007.2 doesn't allow you to enter the "/" or "\" characters, which should be on the same key (0?) as "+".
 You can instead add these characters to other keys, in this example ">" and "/" are added to the 1 key.
+You may also insert the tab character \t, which provides tab completion.
 The  | character may also be useful.
 Edit <tt>/etc/multitap-pad/im-multipress.conf</tt>:
 
@@ -11,7 +12,7 @@ Edit <tt>/etc/multitap-pad/im-multipress.conf</tt>:
  KP_2 = a;b;c;2
  KP_3 = d;e;f;3
  KP_4 = g;h;i;4
- KP_5 = j;k;l;5
+ KP_5 = j;k;l;5;\t
  KP_6 = m;n;o;6
  KP_7 = p;q;r;s;7
  KP_8 = t;u;v;8
