--- a/Distributions.mw
+++ b/Distributions.mw
@@ -172,7 +172,7 @@ Footnotes:
 
 (1) works, but need additional software to be installed
 
-(2) unusable due to lack of certain keyboard characters (unless you [[Switching_Keyboards#Matchbox_keyboard|install matchbox-keyboard]])
+(2) unusable due to lack of certain keyboard characters. [[Switching_Keyboards#Matchbox_keyboard|Various fixes available.]]
 
 (3) there is a UI but it crashes the device when used.
 
