change 'allow-hotplug' to 'auto' in Ubuntu example code and explanation

--- a/USB_Networking.mw
+++ b/USB_Networking.mw
@@ -164,17 +164,17 @@ Edit /etc/network/interfaces and add:
 
 </pre>
 
-This is more sophisticated than the manual setup.  The allow-hotplug stanza ties into Linux hotplug system so that when the device appears and vanishes, as happens when the FreeRunner's is connected via USB, this is run.  
+This is more sophisticated than the manual setup.  The 'auto usb' stanza ties into the Linux hotplug system so that when the device appears and vanishes, as happens when the FreeRunner is connected via USB, this is run.  
 
 In addition, the desktop-side netmask is limited to a much smaller range, so that overlapping subnets are less of a problem - Linux will use more specific routes first when deciding where to send packets.
 
-An other possible configuration that adds DNS forward and removes
-the iptable changes after the unplugg.
+Another possible configuration that adds DNS forward and removes
+the iptables changes after unplugging:
 
 in /etc/network/interfaces add
 <pre>
  # freerunner
- allow-hotplug usb0
+ auto usb0
  iface usb0 inet static
         address 192.168.0.200
         netmask 255.255.255.192
