*Empty MediaWiki Message*

--- a/Orrery.mw
+++ b/Orrery.mw
@@ -10,7 +10,12 @@
 '''NEWS'''
 
 .ipk files for this program are now available for both the 2007.2
-and 2008.8 stacks.   It is much easier to install than it used to be.
+and 2008.8 stacks, at the gForge site.   It is much easier to install
+than it used to be. The program has been added to the community
+repository, so if you are running the 2008.8 stack, you need only
+type:
+
+'''opkg install orrery'''
 
 Version 1.1 Released:
     New user features:
