*Empty MediaWiki Message*

--- a/Illume.mw
+++ b/Illume.mw
@@ -3,7 +3,7 @@ il·lume (ĭ-lōōm') tr.v. To illuminate.
 Bringing light to the darkness of the mobile world.
 
 =Introduction=
-Illume is a module for Enlightenment (www.enlightenment.org) that modifies the user interface of enlightenment to work cleanly and nicely on a mobile device - such as an OpenMoko phone. It is currently geared more for a 480x640 (VGA) portrait mode screen but can be trivially modified to work on QVGA or any other resolution. The Final goal is to have it work on a wide range of resolutions seamlessly.
+Illume is a module for [www.enlightenment.org Enlightenment] that modifies the user interface of enlightenment to work cleanly and nicely on a mobile device - such as an Openmoko phone. It is currently geared more for a 480x640 (VGA) portrait mode screen but can be trivially modified to work on QVGA or any other resolution. The Final goal is to have it work on a wide range of resolutions seamlessly.
 
 It combines an application launcher interface along with an application manager and switcher, virtual keyboard support, as well as forcing certain simple layout policies on applications (such as making their main windows borderless and fullscreen except for Illume's control bar), as well as support for the X11 port of qtopia.
 
