*Empty MediaWiki Message*

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -320,6 +320,7 @@ __NOTOC__
 *[[NAND bad blocks]]
 *[[Boot from sd card]]
 ====Software Documentation====
+*[[Illume]]
 *[[Debian]]
 *[[GPS Data Logger]]
 *[[Setting Date and Time]]
