added myself and changed some style :)

--- a/Openmoko_Local_Groups:_Freiburg_im_Breisgau.mw
+++ b/Openmoko_Local_Groups:_Freiburg_im_Breisgau.mw
@@ -1,5 +1,5 @@
 ===  Participants ===
-{|border=1
+{| border="5" cellspacing="0" cellpadding="10" style="border-collapse:collapse;background:#ece9e4;" 
 !Name
 !Skills
 !Level of Interest
@@ -17,6 +17,12 @@
 |fun! playing with possible UIs for a pocket-size, touchscreen-only PC, tbc...
 |Freiburg
 |GTA02 (not yet: Pulster 25.07.)
+|-
+|[[User:enaut|enaut]]
+|mhm some Java less C++ and the basics of a first year computerscience student.
+|i don't know yet.
+|Freiburg (/ Calw Wohnsitz meiner Familie)
+|GTA02
 |}
 
 === Notes ===
