--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -101,15 +101,13 @@ This should solve most off your moko side networking issues. If you need any oth
 * The installer app doesn't release administrative rights which results in not being able to use opkg. Solution: run "killall packagekitd" (on the freerunner or when ssh'ed in).
 * The installer app doesn't release administrative rights which results in not being able to use opkg. Alternate Solution: On the FreeRunner, use the drop-down menu to close all open applications.
 
-== Updates ==
+= Future updates =
 
-There should be some official updates for 2008.8 setup soon, but in the meantime, you'll have to wait.
+{{note|As of August 20th, there are *NO* updates available for 2008.8 anywhere on buildhost.openmoko.org - the daily-feeds directory is incompatible with 2008.8 and will corrupt your software configuration if you use it.}}
 
-{{note|There are *NO* updates available for 2008.8 anywhere on buildhost.openmoko.org - the daily-feeds directory is incompatible with 2008.8 and will corrupt your software configuration if you use it.}}
+Posterior to the Om2008.8 release, in August 2008 development is switching to a Debian-like model with three branches: stable,  testing and unstable. To minimize chaos, breakage and confusion, official updates for 2008.8 will be made available only when the move is complete ([http://lists.openmoko.org/pipermail/community/2008-August/026491.html see this message] for more details.)
 
-'''More details about the official updates being set-up here : http://lists.openmoko.org/pipermail/community/2008-August/026491.html'''
-
-In the meantime, you may try at your own risk [[Download#Unofficial_builds_by_zecke]].
+In the meantime, you may try at your own risk [[Download#Unofficial_builds_by_zecke]] and Raster's builds.
 
 [[Category:Openmoko]]
 [[Category:Om 2008.8]]
