--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -29,31 +29,32 @@
 [[Image:List.png|200px|center]]
 |}
 
-== What's New ==
+= What's New =
 '''Om 2008.8''' was designed to be empty, for the very purpose of showcasing your ideas.
 
 Think of our products as galleries. We're building the environment. Each one different from the next. You'll get all the free art supplies you could imagine because we want you to add your own meaning. You choose: consume, create, or both.
 
 Either way you create your own meaning. It's about you. 
 
-=== Customize ===
+== Customize ==
 '''Om 2008.8''' allows you to customize your Neo in many aspects.
 
 *  '''Use the [[Om2008.8_Installer|Installer]]''' to find apps and modifications for your Neo.
 *  '''Re-design themes''' by customizing your own [[Edje]] files.
 *  '''Source Codes''' are publicly available, allowing for customization all the way down to low level systems.
 
-=== Share ===
+== Share ==
 * share your locations  ([[Om2008.8_Locations|Locations]])
 :you can use '''Locations''' to save your favorite spots and even send it to friends via sms.  How cool is that?!
 * share your applications ([[Om2008.8_Installer|Installer]])
 :share your ideas with the world by adding packages to the [http://wiki.openmoko.org/wiki/CommunityRepository Community Repository].  It is a great database for all things openmoko and can easily be accessed by any user through the [[Om2008.8 Installer|Installer]].
 
-=== Om 2008.8 Guide ===
+== Om 2008.8 Guide ==
 A guide for getting to know Om 2008.8 : [[Om 2008.8 Guide]]
 
 <!---the following anchor is here to ensure that the "Download" link at http://openmoko.com/download.html links to the correct section. please don't delete the anchor unless that link is changed or removed--->
 <span id="Flash_Om_2008.8_images"></span>
+
 = Installing =
 
 If you want install this software distribution to your device, you have to follow these steps:
