Rewrite the "what's new" section

--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -3,10 +3,15 @@
 
 {{Distributions|Om 2008.8}}
 
-=Introduction=
-'''Om 2008.8''' is the successor to [[Om 2007.2]] and had '''ASU''' as a codename. It was [http://lists.openmoko.org/pipermail/community/2008-August/025619.html launched] on '''August 08, 2008'''. Om 2008.8 uses EFL for the launcher, custom UI applications and [[QtopiaOnX11|Qtopia on X11]] for telephony.  It is the first step from GTK+ on x11 to using multiple toolkits in combination. '''Om 2008.8''' now supports [http://www.enlightenment.org/ EFL], [http://trolltech.com/products/qtopia Qtopia] and [http://www.gtk.org GTK+] applications.
+=Goals=
 
-''To see how it all got started go to'' [[Om2008.8 Feature Plan|Om 2008.8 Feature Plan]].
+'''Om 2008.8''' is the successor to [[Om 2007.2]] and had '''ASU''' as a codename. It was [http://lists.openmoko.org/pipermail/community/2008-August/025619.html released] on '''August 08, 2008'''. Om 2008.8 uses EFL for the launcher, custom UI applications and [[QtopiaOnX11|Qtopia on X11]] for telephony. The distribution  is the first step from GTK+ on x11 to using multiple toolkits in combination.  To see how it all got started go to [[Om2008.8 Feature Plan|Om 2008.8 Feature Plan]].
+
+'''Om 2008.8''' was designed to be empty, for the very purpose of showcasing your ideas.
+
+Think of our products as galleries. We're building the environment. Each one different from the next. You'll get all the free art supplies you could imagine because we want you to add your own meaning. You choose: consume, create, or both.
+
+Either way you create your own meaning. It's about you. 
 
 {| class="wikitable" cellspacing="2" cellpadding="2" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #c0c0c0; background:#eeeeee; width:100%;floating="center"; "
 ! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:25% " |  
@@ -29,28 +34,22 @@
 [[Image:List.png|200px|center]]
 |}
 
-= What's New =
-'''Om 2008.8''' was designed to be empty, for the very purpose of showcasing your ideas.
+= What's New ? =
 
-Think of our products as galleries. We're building the environment. Each one different from the next. You'll get all the free art supplies you could imagine because we want you to add your own meaning. You choose: consume, create, or both.
+The main user-visible changes compared to 2007.2 are:
 
-Either way you create your own meaning. It's about you. 
+* The user interface has been fully revised with a new windows manager [[illume]]. It is visually much richer, and can be customized further by using your own [[Edje]] files.
+* '''[[Om2008.8_Installer|A graphical installer]]''' allows to add easily new applications, themes and functionalities.
+* A new [[Om2008.8_Locations|Locations]] application is provided, to save your favorite spots and share them with friends via sms.
+* Power management has been improved: The Aux button now locks the screen, the Power button suspends and the red LED behind the Aux button lights up when charging.
+* The keyboard is now the Qtopia one.
 
-== Customize ==
-'''Om 2008.8''' allows you to customize your Neo in many aspects.
+For developers, the main changes are:
+* Multiple toolkits: '''Om 2008.8''' supports [http://www.enlightenment.org/ EFL], [http://trolltech.com/products/qtopia Qtopia] and [http://www.gtk.org GTK+] applications.
+* A [http://wiki.openmoko.org/wiki/CommunityRepository Community Repository] has been set up, it is integrated in the ([[Om2008.8_Installer|Installer]]).
+* '''Source Codes''' are publicly available, allowing for customization all the way down to low level systems.
 
-*  '''Use the [[Om2008.8_Installer|Installer]]''' to find apps and modifications for your Neo.
-*  '''Re-design themes''' by customizing your own [[Edje]] files.
-*  '''Source Codes''' are publicly available, allowing for customization all the way down to low level systems.
-
-== Share ==
-* share your locations  ([[Om2008.8_Locations|Locations]])
-:you can use '''Locations''' to save your favorite spots and even send it to friends via sms.  How cool is that?!
-* share your applications ([[Om2008.8_Installer|Installer]])
-:share your ideas with the world by adding packages to the [[CommunityRepository]].  It is a great database for all things openmoko and can easily be accessed by any user through the [[Om2008.8 Installer|Installer]].
-
-== Om 2008.8 Guide ==
-A guide for getting to know Om 2008.8 : [[Om 2008.8 Guide]]
+For more details, see the [[Om 2008.8 Guide]].
 
 <!---the following anchor is here to ensure that the "Download" link at http://openmoko.com/download.html links to the correct section. please don't delete the anchor unless that link is changed or removed--->
 <span id="Flash_Om_2008.8_images"></span>
@@ -58,7 +57,7 @@ A guide for getting to know Om 2008.8 : [[Om 2008.8 Guide]]
 = Installing =
 
 If you want install this software distribution to your device, you have to follow these steps:
-* Download the recent image of Om2008.8 on the [[Downloads#Openmoko_2008.8_images_.28ASU.29|Downloads]] page
+* Download the recent image of Om2008.8 on the [[Downloads#Openmoko_2008.8_images_.28ASU.29|Downloads]] page. Images are only for the FreeRunner, not for the Neo1973.
 * [[Flashing the Neo FreeRunner|Flash]] to your Neo FreeRunner
 
 = Known Issues =
