--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -46,7 +46,7 @@ The main user-visible changes compared to 2007.2 are:
 
 For developers, the main changes are:
 * Multiple toolkits: '''Om 2008.8''' supports [http://www.enlightenment.org/ EFL], [http://trolltech.com/products/qtopia Qtopia] and [http://www.gtk.org GTK+] applications.
-* A [http://wiki.openmoko.org/wiki/CommunityRepository Community Repository] has been set up, it is integrated in the ([[Om2008.8_Installer|Installer]]).
+* A [[Community Repository]] has been set up, it is integrated in the ([[Om2008.8_Installer|Installer]]).
 * '''Source Codes''' are publicly available, allowing for customization all the way down to low level systems.
 
 For more details, see the [[Om 2008.8 Guide]].
