--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -36,13 +36,15 @@ Either way you create your own meaning. It's about you.
 
 = What's New ? =
 
-The main user-visible changes compared to 2007.2 are:
+Compared to 2007.2 that has a longer development history, Om 2008.8 is definitely a .0 major release. So think KDE 4.0 vs. 3.5, not Linux 2.6.23 vs. 2.6.22.
+
+The main user-visible changes:
 
 * The user interface has been fully revised with a new windows manager [[illume]]. It is visually much richer, and can be customized further by using your own [[Edje]] files.
 * '''[[Om2008.8_Installer|A graphical installer]]''' allows to add easily new applications, themes and functionalities.
 * A new [[Om2008.8_Locations|Locations]] application is provided, to save your favorite spots and share them with friends via sms.
 * Power management has been improved: The Aux button now locks the screen, the Power button suspends and the red LED behind the Aux button lights up when charging.
-* The keyboard is now the Qtopia one.
+* The keyboard is now the Qtopia one (wether this is an improvement has been hotly debated).
 
 For developers, the main changes are:
 * Multiple toolkits: '''Om 2008.8''' supports [http://www.enlightenment.org/ EFL], [http://trolltech.com/products/qtopia Qtopia] and [http://www.gtk.org GTK+] applications.
