--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -48,7 +48,7 @@ The main user-visible changes:
 
 For developers, the main changes are:
 * Multiple toolkits: '''Om 2008.8''' supports [http://www.enlightenment.org/ EFL], [http://trolltech.com/products/qtopia Qtopia] and [http://www.gtk.org GTK+] applications.
-* A [[Community Repository]] has been set up, it is integrated in the ([[Om2008.8_Installer|Installer]]).
+* A [[CommunityRepository| Community Repository]] has been set up, it is integrated in the ([[Om2008.8_Installer|Installer]]).
 * '''Source Codes''' are publicly available, allowing for customization all the way down to low level systems.
 
 For more details, see the [[Om 2008.8 Guide]].
