--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -56,11 +56,11 @@ For more details, see the [[Om 2008.8 Guide]].
 <!---the following anchor is here to ensure that the "Download" link at http://openmoko.com/download.html links to the correct section. please don't delete the anchor unless that link is changed or removed--->
 <span id="Flash_Om_2008.8_images"></span>
 
-= Installing =
+= Installation =
 
-If you want install this software distribution to your device, you have to follow these steps:
-* Download the recent image of Om2008.8 on the [[Downloads#Openmoko_2008.8_images_.28ASU.29|Downloads]] page. Images are only for the FreeRunner, not for the Neo1973.
-* [[Flashing the Neo FreeRunner|Flash]] to your Neo FreeRunner
+To install the Om2008.8 distribution on the Neo FreeRunner:
+* Download the Root Filesystem (Om2008.8-gta02-20080808.rootfs.jffs2, 68M) and the kernel (Om2008.8-gta02-20080808.uImage.bin 1.8M) images as explained in the [[Downloads#Openmoko_2008.8_images_.28ASU.29|Downloads]] page.
+* [[Flashing the Neo FreeRunner|Flash]] them to your Neo FreeRunner
 
 = Known Issues =
 '''GSM'''
