corrected info about config loss

--- a/TangoGPS.mw
+++ b/TangoGPS.mw
@@ -68,10 +68,9 @@ Turns the GPS on.
 *** tangogps could be extended to read data from the framework.
 
 == Downloading Maps for offline use ==
-tangoGPS can bunch-download the map images so you don't need an internet connection while walking around. By default tangoGPS stores downloaded maps to /tmp/. This folder is lost every time you reboo the device. But you can use the "Config" tab within tangoGPS to change the "Cache Dir" location to , for example, /osm/ . So downloaded maps will be kept in the Neos flash, also after reboot. Unfortunately this configruation is lot every time you restart tangoGPS. So every time you start tangoGPS you have to go to this Config tab and set the correct location.
+tangoGPS can bunch-download the map images so you don't need an internet connection while walking around. By default tangoGPS stores downloaded maps to /tmp/. This folder is lost every time you reboo the device. But you can use the "Config" tab within tangoGPS to change the "Cache Dir" location to , for example, /osm/ . So downloaded maps will be kept in the Neos flash, also after reboot. This works fine on OM2007.2 and Debian. If this config gets lost during reboot file a bug against your distro.
 
 Once you have set the location to a non-volatile path, you can connect your Neo to the internet by USB or WiFi at home and start downloading the maps of your area. Tap the map screen and select "map download". Now on-the-road  tangoGPS will be able to show you maps in different zoom levels even though you are not connected to the inet.
-
 
 == Downloading Maps via GPRS ==
 I think TangoGPS may have started working after I followed the instructions to get GPRS working with GSM multiplexing here: [[Manually_using_GPRS#Option_1:_With_GSM_multiplexing_and_with_a_GUI]]
