--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -59,8 +59,12 @@ For more details, see the [[Om 2008.8 Guide]].
 = Installation =
 
 To install the Om2008.8 distribution on the Neo FreeRunner:
-* Download the Root Filesystem (Om2008.8-gta02-20080808.rootfs.jffs2, 68M) and the kernel (Om2008.8-gta02-20080808.uImage.bin 1.8M) images as explained in the [[Downloads#Openmoko_2008.8_images_.28ASU.29|Downloads]] page.
-* [[Flashing the Neo FreeRunner|Flash]] them to your Neo FreeRunner
+* As explained in the [[Downloads#Openmoko_2008.8_images_.28ASU.29|Downloads]] page, download the Root Filesystem ([http://downloads.openmoko.org/releases/Om2008.8/Om2008.8-gta02-20080808.rootfs.jffs2 Om2008.8-gta02-20080808.rootfs.jffs2], 68M) and the Kernel ([http://downloads.openmoko.org/releases/Om2008.8/Om2008.8-gta02-20080808.uImage.bin Om2008.8-gta02-20080808.uImage.bin], 1.8M) image files.
+* Download and install the [[dfu-util]] software for your architecture.
+* It's backup time !
+* Using dfu-util, [[Flashing the Neo FreeRunner|flash]] the two images in the appropriate partitions of the Neo FreeRunner. Alternatively, you may test the distribution by installing it on the microSD card and [[Booting from SD | boot from microSD card]].
+* Since you just wiped out /etc, /root  and /users, you may want to reconfigure a few things, like /etc/resolv.conf. the root password, adding a non-root user, ~/.ssh/authorized_keys and so on.
+* Reinstall your favorite applications.
 
 = Known Issues =
 '''GSM'''
