--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -63,7 +63,7 @@ To install the Om2008.8 distribution on the Neo FreeRunner:
 * Download and install the [[dfu-util]] software for your architecture.
 * It's backup time !
 * Using dfu-util, [[Flashing the Neo FreeRunner|flash]] the two images in the appropriate partitions of the Neo FreeRunner. Alternatively, you may test the distribution by installing it on the microSD card and [[Booting from SD | boot from microSD card]].
-* Since you just wiped out /etc, /root  and /users, you may want to reconfigure a few things, like /etc/resolv.conf. the root password, adding a non-root user, ~/.ssh/authorized_keys and so on.
+* Since you just wiped out /etc, /root  and /users, you may want to reconfigure a few things, like /etc/resolv.conf (see below). For security, you may want to set a root password, add a non-root user and transfer ~/.ssh/authorized_keys and so on.
 * Reinstall your favorite applications.
 
 = Known Issues =
