--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -3,7 +3,7 @@
 
 {{Distributions|Om 2008.8}}
 
-=Goals=
+=Release goals=
 
 '''Om 2008.8''' is the successor to [[Om 2007.2]] and had '''ASU''' as a codename. It was [http://lists.openmoko.org/pipermail/community/2008-August/025619.html released] on '''August 08, 2008'''. Om 2008.8 uses EFL for the launcher, custom UI applications and [[QtopiaOnX11|Qtopia on X11]] for telephony. The distribution  is the first step from GTK+ on x11 to using multiple toolkits in combination.  To see how it all got started go to [[Om2008.8 Feature Plan|Om 2008.8 Feature Plan]].
 
