Add a swedish news article

--- a/Press_Coverage.mw
+++ b/Press_Coverage.mw
@@ -356,6 +356,7 @@ This site contains the press coverage about OpenMoko and the Neo 1973 sorted by 
 === Scandinavian ===
 
 
+*expressen.se, 15. aug 2008, [http://www.expressen.se/prylar/1.1266066/mobilen-du-kan-bygga-om-sjalv Mobilen du kan bygga om själv] (the customizable phone)
 *computerworld.dk, 4. juli 2008, [http://www.computerworld.dk/art/46877?a=block&i=205&pos=8&bpos=999 Anti-iPhonen OpenMoko på gaden i dag].
 *version2.dk, 4. jul 2008, [http://www.version2.dk/artikel/7825 Galleri: Open source-phonen OpenMoko Neo Free Runner].
 *version2.dk, 4. jul 2008, [http://www.version2.dk/artikel/7823 Linux-phonen vil også med i det smarte selskab].
