--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -3,15 +3,22 @@
 
 {{Distributions|Om 2008.8}}
 
-=Release goals=
-
+= Introduction =
 '''Om 2008.8''' is the successor to [[Om 2007.2]] and had '''ASU''' as a codename. It was [http://lists.openmoko.org/pipermail/community/2008-August/025619.html released] on '''August 08, 2008'''. Om 2008.8 uses EFL for the launcher, custom UI applications and [[QtopiaOnX11|Qtopia on X11]] for telephony. The distribution  is the first step from GTK+ on x11 to using multiple toolkits in combination.  To see how it all got started go to [[Om2008.8 Feature Plan|Om 2008.8 Feature Plan]].
 
-'''Om 2008.8''' was designed to be empty, for the very purpose of showcasing your ideas.
+<pre>
+From: OpenMoko
+To: openmoko-community mailing list
 
-Think of our products as galleries. We're building the environment. Each one different from the next. You'll get all the free art supplies you could imagine because we want you to add your own meaning. You choose: consume, create, or both.
+Om 2008.8 was designed to be empty, for the very purpose of showcasing your ideas.
 
-Either way you create your own meaning. It's about you. 
+Think of our products as galleries. We're building the environment.
+Each one different from the next. You'll get all the free art supplies
+you could imagine because we want you to add your own meaning.
+You choose: consume, create, or both.
+
+Either way you create your own meaning. It's about you.
+</pre>
 
 {| class="wikitable" cellspacing="2" cellpadding="2" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #c0c0c0; background:#eeeeee; width:100%;floating="center"; "
 ! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:25% " |  
