--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -3,39 +3,9 @@
 
 {{Distributions|Om 2008.8}}
 
-= Introduction =
-'''Om 2008.8''' is the successor to [[Om 2007.2]] and had '''ASU''' as a codename. It was [http://lists.openmoko.org/pipermail/community/2008-August/025619.html released] on '''August 08, 2008'''. Om 2008.8 uses EFL for the launcher, custom UI applications and [[QtopiaOnX11|Qtopia on X11]] for telephony. The distribution  is the first step from GTK+ on x11 to using multiple toolkits in combination.  To see how it all got started go to [[Om2008.8 Feature Plan|Om 2008.8 Feature Plan]].
+= Summary =
 
-<pre>
-From: OpenMoko
-To: openmoko-community mailing list
-
-Om 2008.8 was designed to be empty, for the very purpose of showcasing your ideas.
-
-Think of our products as galleries. We're building the environment.
-Each one different from the next. You'll get all the free art supplies
-you could imagine because we want you to add your own meaning.
-You choose: consume, create, or both.
-
-Either way you create your own meaning. It's about you.
-</pre>
-
-{| class="wikitable" cellspacing="2" cellpadding="2" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #c0c0c0; background:#eeeeee; width:100%;floating="center"; "
-! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:33% " |
-[[Image:Om2008 home.png|200px|center]]
-! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:33% " |
-[[Image:Installer4.png|200px|center]]
-! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:33% " |
-[[Image:Om2008 installer1.png|200px|center]]
-|-
-
-! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:33% " |  
-[[Image:Main.png|200px|center]]
-! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:33% " |
-[[Image:Edit1.png|200px|center]]
-! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:33% " |
-[[Image:Om locations4.png|200px|center]]
-|}
+'''Om 2008.8''' is the successor to [[Om 2007.2]] and had '''ASU''' as a codename. It was [http://lists.openmoko.org/pipermail/community/2008-August/025619.html released] on '''August 08, 2008'''. Om 2008.8 uses EFL for the launcher, custom UI applications and [[QtopiaOnX11|Qtopia on X11]] for telephony. The distribution  is the first step from GTK+ on x11 to using multiple toolkits in combination.
 
 = What's New ? =
 
@@ -54,7 +24,26 @@ For developers, the main changes are:
 * A [[CommunityRepository| Community Repository]] has been set up, it is integrated in the ([[Om2008.8_Installer|Installer]]).
 * '''Source Codes''' are publicly available, allowing for customization all the way down to low level systems.
 
-For more details, see the [[Om 2008.8 Guide]].
+For more details, see the [[Om 2008.8 Guide]] and the [[Om2008.8 Feature Plan|Om 2008.8 Feature Plan]].
+
+
+{| class="wikitable" cellspacing="2" cellpadding="2" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #c0c0c0; background:#eeeeee; width:100%;floating="center"; "
+! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:33% " |
+[[Image:Om2008 home.png|200px|center]]
+! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:33% " |
+[[Image:Installer4.png|200px|center]]
+! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:33% " |
+[[Image:Om2008 installer1.png|200px|center]]
+|-
+
+! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:33% " |  
+[[Image:Main.png|200px|center]]
+! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:33% " |
+[[Image:Edit1.png|200px|center]]
+! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:33% " |
+[[Image:Om locations4.png|200px|center]]
+|}
+
 
 <!---the following anchor is here to ensure that the "Download" link at http://openmoko.com/download.html links to the correct section. please don't delete the anchor unless that link is changed or removed--->
 <span id="Flash_Om_2008.8_images"></span>
@@ -117,6 +106,22 @@ This should solve most off your moko side networking issues. If you need any oth
 Posterior to the Om2008.8 release, in August 2008 development is switching to a Debian-like model with three branches: stable,  testing and unstable. To minimize chaos, breakage and confusion, official updates for 2008.8 will be made available only when the move is complete ([http://lists.openmoko.org/pipermail/community/2008-August/026491.html see this message] for more details.)
 
 In the meantime, you may try at your own risk [[Download#Unofficial_builds_by_zecke]] or Raster's builds.
+
+= Dedication =
+
+<pre>
+From: OpenMoko
+To: openmoko-community mailing list
+
+Om 2008.8 was designed to be empty, for the very purpose of showcasing your ideas.
+
+Think of our products as galleries. We're building the environment.
+Each one different from the next. You'll get all the free art supplies
+you could imagine because we want you to add your own meaning.
+You choose: consume, create, or both.
+
+Either way you create your own meaning. It's about you.
+</pre>
 
 [[Category:Openmoko]]
 [[Category:Om 2008.8]]
