--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -59,6 +59,9 @@ To install the Om2008.8 distribution on the Neo FreeRunner:
 * Reinstall your favorite applications.
 
 = Known Issues =
+
+See [http://docs.openmoko.org/trac/search?q=2008.8 all tickets with 2008.8] in the bug tracker.
+
 '''GSM'''
 
 * [http://docs.openmoko.org/trac/ticket/1766 Cannot make calls or receive SMS messages]
