--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -60,7 +60,7 @@ To install the Om2008.8 distribution on the Neo FreeRunner:
 
 = Known Issues =
 
-See [http://docs.openmoko.org/trac/search?q=2008.8 all tickets with 2008.8] in the bug tracker.
+This is only a subset. See [http://docs.openmoko.org/trac/search?q=2008.8 all tickets with 2008.8] in the bug tracker.
 
 '''GSM'''
 
