/* Set up your local.conf */

--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -25,7 +25,7 @@ You must also download the SHR code using subversion.  See http://projects.openm
 === Set up your local.conf ===
 Cd to $MOKO/openembedded
 
-Append the following lines to conf/local.conf:
+Append the following lines to $MOKO/build/conf/local.conf:
   BBFILES += "$SHRSVN/trunk/packages/*.bb $MOKO/openembedded/packages/*/*.bb"
   SELECTED_OPTIMIZATION = "-Os -g"
 
