--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -48,6 +48,8 @@ and make sure that these Gtk+ options are set:
 
 === Run bitbake ===
 
+(Don't forget to source the setup-env file in the shell before running bitbake)
+
   bitbake openmoko-dialer3
 
 After the first time you build successfully, you can build with
