--- a/Dfu-util.mw
+++ b/Dfu-util.mw
@@ -182,6 +182,8 @@ Resetting USB...
 not at least 2 device changes found ?!?
 Lost device after RESET?</pre> retry the command - it should work on a second run.
 
+If dfu-util complains about not being able to program the device while in runtime mode, do the following: while in the boot menu, remove the usb cable and insert it again. Depending on the version of uBoot it should display somewhere in the menu that it is now in DFU mode. Now dfu-util should be able to continue.
+
 == See also ==
 *[[Flashing the Neo 1973]] to the latest software.
 *[[Flashing the Neo FreeRunner]]
