*Empty MediaWiki Message*

--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -20,20 +20,19 @@ You must also download the SHR code using subversion.  See http://projects.openm
 
   export CACHE=tmp/cache
 
-
-
 === Set up your local.conf ===
-Cd to $MOKO/openembedded
 
-Append the following lines to $MOKO/build/conf/local.conf:
+Edit $MOKO/build/conf/local.conf and append the following lines:
   BBFILES += "$SHRSVN/trunk/packages/*.bb $MOKO/openembedded/packages/*/*.bb"
   SELECTED_OPTIMIZATION = "-Os -g"
 
 ''Note: Spaces are important in your bitbake conf files!  You must have spaces before & after the = or +=''
 
+(Environment variables, $SHRSVN and $MOKO, can not be used inside local.conf, so absolute paths must be used instead)
+
 === Set up your openmoko.conf (if using 2007.2) ===
 
-edit $MOKO/openembedded/conf/distro/openmoko.conf
+Edit $MOKO/openembedded/conf/distro/openmoko.conf
 
 and make sure that these Gtk+ options are set:
 
