--- a/Wishlist%2FSport_tracker.mw
+++ b/Wishlist%2FSport_tracker.mw
@@ -11,3 +11,7 @@ The idea of this program is to help a user to track the distance/velocity they h
 * I want to time myself on a run of a certain distance, but I don't feel like running at the track.  I pick a course where I can run an arbitrary distance, start the tracker (after specifying how far I want to run) and take off.  The tracker begins tracking distance and time.  The phone vibrates/rings to notify me that I have completed the run and it automatically stops the timer.
 
 * I want to run at a certain pace.  I input my desired pace in the sport tracker and begin running.  The sport tracker informs me visually and/or audibly when I go over a certain (configurable?) threshold faster or slower than the desired pace.  It would help to learn what the desired tempo feels like.
+
+== Heart rate monitoring ==
+
+A [http://www.bluetooth.com/Bluetooth/Press/SIG/BLUETOOTH_SIG_ANNOUNCES_MEDICAL_DEVICE_PROFILE_AT_MEDICA_SHOW.htm Bluetooth Medical Device Profile] was announced in November 2007. This suggests that by late 2008, there may be affordable heart rate monitors that speak bluetooth to the FreeRunner, provided the MDP protocol is implemented. A possible problem will be that they may implement a Ultra Low Power bluetooth protocol, which the FreeRunner may or may not be able to use.
