/* Q: My mrxvt (terminal) fonts are huge. */

--- a/Om_2007.2%2Fes.mw
+++ b/Om_2007.2%2Fes.mw
@@ -280,13 +280,13 @@ El nuevo paquete no debería ser mostrado en el menú de programas hasta que rei
 * Official snapshots and ipkg repository:
 ** http://buildhost.openmoko.org/snapshots/2007.08/
 
-=== Q: My mrxvt (terminal) fonts are huge. ===
+=== Q: Mis fuentes de mrxvt (terminal) son demasiado grandes. ===
 
-Edit src/feature.h to set MIN_XFT_FONT_SIZE to lower value:
+Edita src/feature.h y cambia MIN_XFT_FONT_SIZE a un valor más pequeño:
  #define MIN_XFT_FONT_SIZE           (2)
-and rebuild mrxvt & openmoko-devel-image.
+y recompila mrxvt & openmoko-devel-image.
 
-End edit /etc/mrxvt/mrxvt.conf
+Para terminar edita /etc/mrxvt/mrxvt.conf
  Mrxvt.xftSize: 4
  Mrxvt.xftHint: 1
 
