/* Pages proposed for deletion */ removed pages that have been deleted, added some talk pages that still exist (I think we don't have to vote on those)

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -86,39 +86,18 @@ These end up in mixed content. They could be removed and content migrated to mor
 |-
 | [[Neo_1973_Power_Button]] || Getting started includes this info for GTA02 || [[User:Kempelen|Kempelen]], [[User:Marko Knöbl|Marko Knöbl]]
 |-
-| [[MFAQ]], [[MFAQEmail]], [[MFAQCorrection]] || Overcomplicating || [[User:Kempelen|Kempelen]], [[User:Marko Knöbl|Marko Knöbl]]
+| [[Talk:MFAQCorrection]] || associated page has already been deleted || 
 |-
-| [[Buying Interest List]] || Page was originally for [[Neo 1973]] - Too many interested people for [[Neo FreeRunner]] || [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
+| [[Talk:Buying Interest List]] || associated page has already been deleted || 
 |-
 | [[Roadmap]] || Emtpy bascially || [[User:Kempelen|Kempelen]], [[User:Marko Knöbl|Marko Knöbl]]
 |-
-| [[GUI Frameworks]] || Empty || [[User:Kempelen|Kempelen]], [[User:Marko Knöbl|Marko Knöbl]]
+| [[Talk:Tempmain/es]] || associated page has already been deleted || 
 |-
-| [[Group_Order]] || Outdated || [[User:Kempelen|Kempelen]], [[User:Marko Knöbl|Marko Knöbl]]
+| [[Talk:Trash]] || associated page has already been deleted || 
 |-
-| [[P1 Buying Interest List]] || Outdated || [[User:Kempelen|Kempelen]], [[User:Marko Knöbl|Marko Knöbl]]
+| [[Talk:GSM Communication Infrastructure]] || associated page was already deleted || 
 |-
-| [[Om 2007.2/de]] || was copied from the english page on 2008-08-05, not translated|| [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
-|-
-| [[Automatic emulation in windows xp]] || redirect to page that doesn't exist anymore|| [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
-|-
-| [[Style Sheet]] and [[Talk:Style Sheet]]|| not used anymore|| [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
-|-
-| [[Supported Hardware/es]] || no content || [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
-|-
-| [[Tempmain/es]] || is now at [[Main Page/es]] || [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
-|-
-| [[Trash]] || || [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
-|-
-| [[外观]] || || [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
-|-
-| [[Finger]] || Funny, but not relevant|| [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
-|-
-| [[GSM Communication Infrastructure]] || not much information|| [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]] (will have to remove links too)
-|-
-| [[Shipping Notes:phase1 Poland]] || outdated|| [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
-|-
-| [[Look_%26_Feel/fr]] || English old copy || [[User:Kempelen|Kempelen]]
 |}
 
 ==Wiki engine issues==
