/* Funcionalidades del nucleo */

--- a/Today%2F2007.2%2Fes.mw
+++ b/Today%2F2007.2%2Fes.mw
@@ -15,7 +15,7 @@ A continuación se exponen algunos casos:
 * Quiero arrancar una aplicación.
 * Quiero pasar a una aplicación que se esta ejecutando.
 
-== Funcionalidades del nucleo ==
+== Funcionalidades ==
 
 (Italicas = Hechas, Negrita = En proceso)
 
