--- a/Users_Repositories.mw
+++ b/Users_Repositories.mw
@@ -67,7 +67,10 @@ Use the following line to add celtune's feed to your neo:
 
 ===FSO===
 Daily builds of the freesmartphone.org distribution can be found at:<br>
-http://totalueberwachung.de/~alphaone/openembedded-build/glibc/images/neo1973/<br>
+http://totalueberwachung.de/~alphaone/openembedded-build/glibc/images/neo1973/ (is this still alive? )(<br>
+
+* [http://shr.bearstech.com/fso-testing/ipk/ testing] <br/>
+* [http://shr.bearstech.com/fso-unstable/ipk/ unstable] <br/>
 
 ===Note===
 If you want to add a link, it would be nice to enforce a standard format of these feeds so that they can be browsed automatically.
