--- a/Users_Repositories.mw
+++ b/Users_Repositories.mw
@@ -70,7 +70,24 @@ Daily builds of the freesmartphone.org distribution can be found at:<br>
 http://totalueberwachung.de/~alphaone/openembedded-build/glibc/images/neo1973/ (is this still alive? )(<br>
 
 * [http://shr.bearstech.com/fso-testing/ipk/ testing] <br/>
+<pre>
+src/gz bearstech-fso-testing-all http://shr.bearstech.com/fso-testing/ipk/all
+src/gz bearstech-fso-testing-armv4t http://shr.bearstech.com/fso-testing/ipk/armv4t
+src/gz bearstech-fso-testing-fic-gta01 http://shr.bearstech.com/fso-testing/ipk/fic-gta01
+src/gz bearstech-fso-testing-neo1973 http://shr.bearstech.com/fso-testing/ipk/neo1973
+src/gz bearstech-fso-testing-om-gta01 http://shr.bearstech.com/fso-testing/ipk/om-gta01
+src/gz bearstech-fso-testing-om-gta02 http://shr.bearstech.com/fso-testing/ipk/om-gta02
+</pre>
+
 * [http://shr.bearstech.com/fso-unstable/ipk/ unstable] <br/>
+<pre>
+src/gz bearstech-fso-unstable-all http://shr.bearstech.com/fso-unstable/ipk/all
+src/gz bearstech-fso-unstable-armv4t http://shr.bearstech.com/fso-unstable/ipk/armv4t
+src/gz bearstech-fso-unstable-fic-gta01 http://shr.bearstech.com/fso-unstable/ipk/fic-gta01
+src/gz bearstech-fso-unstable-neo1973 http://shr.bearstech.com/fso-unstable/ipk/neo1973
+src/gz bearstech-fso-unstable-om-gta01 http://shr.bearstech.com/fso-unstable/ipk/om-gta01
+src/gz bearstech-fso-unstable-om-gta02 http://shr.bearstech.com/fso-unstable/ipk/om-gta02
+</pre>
 
 ===Note===
 If you want to add a link, it would be nice to enforce a standard format of these feeds so that they can be browsed automatically.
