/* Backing up just /home/root */

--- a/Backup.mw
+++ b/Backup.mw
@@ -8,7 +8,7 @@ From the desktop pc run:
 
 Where phone is the ip address of your phone (192.168.0.202).
 
-Personally I added an entry to /etc/hosts so the above works for me. I also added the desktop key to /home/root.ssh/authorized_keys on the phone as per the instructions in [[USB_Networking#SSH_Keys]].
+Personally I added an entry to /etc/hosts so the above works for me. I also added the desktop key to /home/root/.ssh/authorized_keys on the phone as per the instructions in [[USB_Networking#SSH_Keys]].
 
 If you want to check what is in the backup, run the following, replacing the filename with what was just created.
 
