/* Prerequisites */ add uboot-mkimage regarding Ubuntu 8.10, dunno about how to use mkimage on 8.04 since not in 8.04 repos

--- a/Toolchain.mw
+++ b/Toolchain.mw
@@ -34,6 +34,9 @@ A (partial) list of required packages -- please append as necessary:
  sudo apt-get install gcc g++ autoconf automake binutils libtool libglib2.0-dev \
  ccache libxrender-dev intltool libmokoui2-dev libgconf2-dev mtools fakeroot alien check
 
+* For Ubuntu 8.10 the following is additionally required, install also those above:
+ sudo apt-get install uboot-mkimage
+
 * For Fedora-Core the following is required, while logged in as <tt>root</tt>:
  yum install gcc gcc-c++ autoconf automake binutils libtool glib2-devel \
  ccache libXrender-devel intltool GConf2-devel mtools gettext-devel
