*Empty MediaWiki Message*

--- a/Om_2007.2%2Fes.mw
+++ b/Om_2007.2%2Fes.mw
@@ -1,6 +1,6 @@
 {{Languages|Om 2007.2}}
 {{OM2007.2}}
-{{Distributions|Om 2007.2}}
+{{Distributions/es|Om 2007.2}}
 
 '''Om 2007.2''' es la segunda versión de la distribución de Openmoko. El desarrollo comenzó el 2007-07-26. [[Om 2008.8]] es el sucesor de este paquete de esta agrupación de software.
 
