Add FreeBSD specific instructions

--- a/USB_Networking.mw
+++ b/USB_Networking.mw
@@ -147,6 +147,14 @@ See [[MacOS_X#USB_Networking|MacOS X USB Networking]].
 == Windows ==
 See [[Neo1973_and_Windows#USB_Ethernet_emulation|Windows USB Ethernet emulation for Neo1973]].
 
+== FreeBSD ==
+You need to load the cdce kernel module.
+As root do:
+
+ kldload cdce
+
+The Neo should then show up as cdce0 and you can handle the cdce0 device just like the usb0 device under Linux. For more information see the cdce manpage.
+
 == Debian, Ubuntu and others ==
 
 Edit /etc/network/interfaces and add:
