*Empty MediaWiki Message*

--- a/Dash_Express.mw
+++ b/Dash_Express.mw
@@ -1,4 +1,4 @@
-The Dash Express is based off of the legendary [[HXD8]]. It does have a debug port that is compatible with the OpenMoko FR debug board. It is fairly hard to get to (for a FR). It sits underneath the screen.
+The Dash Express is based off of the legendary [[HXD8]]. The FCC ID is: EUNHXD8V2. It does have a debug port that is compatible with the OpenMoko FR debug board. It is fairly hard to get to (for a FR). It sits underneath the screen.
 
 It has 3GB of internal flash. The DFU map is below: 
 
