--- a/Booting_the_Neo_FreeRunner_from_SD_via_U-Boot.mw
+++ b/Booting_the_Neo_FreeRunner_from_SD_via_U-Boot.mw
@@ -127,6 +127,15 @@ We will now create a 8 mb partition for our kernel and another one for the rootf
 
 ''Should probably need to change type of first partition to FAT 16 too ?''
 
+if it exits with something like
+
+Calling ioctl() to re-read partition table
+fdisk: WARNING: rereading partition table failed, kernel still uses old table: Device or resource busy
+
+umount /dev/mmcblk0p1
+
+and start all over again
+
 === Formatting the SD card ===
 
 Just issue the following command to create at FAT filesystem:
