--- a/Neo_FreeRunner_GPS.mw
+++ b/Neo_FreeRunner_GPS.mw
@@ -2,7 +2,7 @@
 
 == Basic Setup ==
 
-For basic setup instructions, check the [[Getting_Started_with_your_Neo_FreeRunner#GPS.2C_GPRS_and_WLAN|GPS getting started instructions]].
+For basic setup instructions, check the [[Getting_Started_with_your_Neo_FreeRunner#Use the GPS|GPS getting started instructions]].
 
 Note that there is a known issue between the GPS and SD card slot which is discussed [[GPS_Problems|here]].
 
