*Empty MediaWiki Message*

--- a/HXD8.mw
+++ b/HXD8.mw
@@ -9,7 +9,7 @@ According to [http://lists.openmoko.org/pipermail/community/2007-October/011324.
 It has been confirmed that the DE is based off of the HXD8.
 
 ==Hardware==
-From the information found in the [https://svn.openmoko.org/trunk/doc/hardware/HXD8v011/ hardware documentation] and [https://svn.openmoko.org/trunk/src/target/kernel/patches/ kernel patches] parts of the subversion repositories, the following specifications can be predicted.
+From the information found in the [https://svn.openmoko.org/trunk/doc/hardware/HXD8v011/ hardware documentation] and [https://svn.openmoko.org/trunk/src/target/kernel/patches/ kernel patches] parts of the subversion repositories, the following specifications can be predicted. The HXD8v2 has shipped under the FCC ID [https://fjallfoss.fcc.gov/oetcf/eas/reports/GenericSearchResult.cfm?RequestTimeout=500 EUNHXD8V2]
 
 ===Processor===
 According to https://svn.openmoko.org/trunk/src/target/kernel/patches/s3c2440-nand-disable-hwecc.patch the HXD8 will feature an [http://www.samsung.com/Products/Semiconductor/common/product_list.aspx?family_cd=MSC0102 S3C2440], capable of running up to 400MHz. The features are the same as the [http://www.samsung.com/products/semiconductor/MobileSoC/ApplicationProcessor/ARM9Series/S3C2410/S3C2410.htm S3C2410] plus a camera interface. 
