--- a/Phone_Development.mw
+++ b/Phone_Development.mw
@@ -2,14 +2,17 @@ Openmoko is still developing new phones. Each phone has an internal name before 
 
 = In development =
 
-== HXD8  ==
-{{Main|HXD8}}
-
 == GTA04 ==
 {{Main|GTA04 revisions}}
 
 == GTA03 ==
 {{Main|GTA03 revisions}}
+
+== DashExpress ==
+{{Main|DashExpress}}
+
+== HXD8  ==
+{{Main|HXD8}}
 
 = Already released =
 
