*Empty MediaWiki Message*

--- a/Dash_Express.mw
+++ b/Dash_Express.mw
@@ -1,3 +1,5 @@
+[[DashExpress]] is the codename of a device that is going to be developped by Openmoko. For more information about other phones in development, visit [[Phone Development]]. 
+
 The Dash Express is based off of the legendary [[HXD8]]. The FCC ID is: EUNHXD8V2. It does have a debug port that is compatible with the OpenMoko [[Debug Board v3]]. It is fairly hard to get to (for a FR). It sits underneath the screen.
 
 It has 3GB of internal flash. The DFU map is below: 
